feat(config): Añadido de configuraciòn para permitir la bienvenida.